--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="col-lg-4 ml-auto">
                            <h4 class="section-heading text-white">Resume</h4>
                            <hr class="light my-4">
-                           <a href="docs/Devansh_Paste_Resume.pdf" download><button class="btn btn-dark btn-xl"><i class="fa fa-download fa-2x" aria-hidden="true"></i></button></a>
+                           <a href="docs/Devansh_Paste_Resume_1.pdf" download><button class="btn btn-dark btn-xl"><i class="fa fa-download fa-2x" aria-hidden="true"></i></button></a>
                         </div>
                      </div>
                   </div>
@@ -145,10 +145,14 @@
                         <h3>Lawerence Technological University</h3>
                         <p>Graduate Research Assistant(<em>September 2020 - Present</em>)</p>
                         <p class="text-muted mb-0">
-                           •	Helping professor in collecting and building data of stock market, with the help of web scraping.<br>
-                           •	Our main aim to identify and predict the which stock is winning or losing.<br>
-                           •	Creating a neural network for classifying the data in Collab.<br>
-                           •	Using Tableau to create data visualization.<br>
+                           •	Researched information regarding "Stock market Analysis" to assist professors with academic pursuits with the help of web scraping<br>
+                           •	Gathered, reviewed, and summarized literature from journals via IEEE and Google Scholar.<br>
+                           •	Created a neural network with the help of Python for Predicting the data in Colab workbook.<br>
+                           •	Created data visualization with the help of Tableau.<br>
+                           •	Analyzed acquired information and presented to professors.<br>
+                           •	Assisted Professor with data collection and performed ETL via tableau.<br>
+                           •	Validated incoming data to check information accuracy and integrity while independently locating and correcting concerns.<br>
+                           •	Summarized search results by preparing written reports, graphs, fact sheets and tables<br>
 
                         </p>
 						<br>
